Fix overflowing film title on card with truncate helper

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -136,6 +136,10 @@ footer a:hover {
     padding: 15px;
 }
 
+.truncate {
+    white-space: nowrap;
+}
+
 .waves-block {
     display: inline-block;
 }
